# LLMInferSim

./: .gitignore  comm_plan.md  conftest.py  moe_discuss.md  pyproject.toml
.claude/: CLAUDE.md
collector/: README.md  __init__.py  __main__.py  _bootstrap.py  checkpoint.py  cli.py  env_check.py  harness.py  paths.py  registry.py  scheduler.py  schemas.py  version_resolver.py  writer.py
configs/: config.yaml  config.yaml.example
docs/: CALIBRATION_METHODOLOGY.md  CALIBRATION_RESULTS_2026-05-18.md  COMMUNICATION_MODELING.md  CORE_SEARCH_MODE_DESIGN.md  LLMINFERSIM_IMPLEMENTATION_PLAN.md  LLMINFERSIM_REFACTOR_DESIGN.md  LLMINFERSIM_SYSTEM_SOLUTION_V3.md  OPERATOR_DB_REFACTOR_DRAFT.md  PROJECT_REPORT.md
examples/: README.md  bench_serve_opt125m.sh  bench_serve_qwen3_30b_a3b_dp2_ep2.sh  bench_serve_qwen3_4b_dp2.sh  bench_serve_v32_tp8.sh  inspect_qwen3_235b_a22b.py  run_deepseek_v4_flash_tp8.py  run_deepseek_v4_pro_tp16_ep16.py  run_opt125m.py  run_pd_disagg_loopback.py  run_pd_disagg_loopback.sh  run_platform_selected.py  run_prefix_caching.py  run_qwen3_235b_a22b_tp8.py  run_qwen3_30b_a3b_tp2.py  run_qwen3_32b_tp2.py  run_qwen3_4b.py  run_qwen3_4b_chunked.py  run_qwen3_4b_dp2.py  run_qwen3_4b_tp2.py
scripts/: README.md  _extract_metrics.py  _meas_common.py  analyze_bench.py  analyze_collectives.py  analyze_stage.py  bench_cases.py  bench_compare.sh  measure_allreduce_in_context.py  measure_compute_overhead.py  measure_compute_peak.py  measure_framework_overhead.py  measure_mem_bw.py  measure_moe_decode_profile.py  measure_moe_decode_profile.sh  measure_moe_kernel_launch.py  measure_nccl_algo_choice.py  measure_p2p_latency.py  profile_moe_fused_measured.py  profile_virtual_runner.py  profile_vllm_runtime_overhead.py  report_allreduce_roofline_gap.py  run_bench_group.sh  (+6 more)
(+414 files in other folders)
